--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "ikh-nodejs",
   "version": "1.0.0",
   "description": "Creating a website using NodeJS with MVC",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "develop": "node index.js"
+    "develop": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -19,7 +19,11 @@
   },
   "homepage": "https://github.com/m-masliukh/ikh-nodejs#readme",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "sequelize": "^6.25.5",
+    "tedious": "^15.1.1"
   }
 }
